# obsidian-web-mcp

./: pyproject.toml
scripts/: 01-gcp-provision.sh  02-setup-rclone.sh  03-setup-systemd.sh  04-setup-qmd-indexer.sh  05-reserve-static-ip.sh  06-setup-caddy.sh  mcp_writer.py
src/obsidian_vault_mcp/: config.py  frontmatter_index.py  rclone_sync.py  server.py  vault.py
src/obsidian_vault_mcp/qmd/: __init__.py  chunker.py  cli.py  db.py  indexer.py  search_engine.py  vertex_client.py
src/obsidian_vault_mcp/tools/: manage.py  write.py  write_advanced.py
vault_bootstrap/system/: agent.md
